api_site/css/style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

body {
    background-color: #161616;
    font-family: 'PT Sans', sans-serif;
    color: #FFF;
    margin: 50px 100px;
    overflow-x: hidden;
}

main {
    position: absolute;
    top: 90vh;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    display: flex;
    flex-wrap: wrap;
    width: 90%;
    max-width: 1300px;
    /* margin: auto; */
    /* margin-top: calc(45vw); */
    justify-content: space-between;
}

header {
    padding-top: 70px;
    /* moet beter responive worden */
    width: 90%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
}

header h1,
header p,
header img {
    position: relative;
    z-index: 10;
}

h1 {
    font-size: 5em;
    text-transform: uppercase;
    margin-bottom: 50px;
}

h1 span {
    font-style: italic;
    font-size: 1.2em;
}

header h1 {
    font-size: 4em;
    margin-bottom: 5px;
    flex-basis: 100%;
}

h2 {
    font-family: 'Roboto', sans-serif;
    font-size: 2.3em;
    font-weight: 300;
    margin-bottom: 15px;
}

h3 {
    font-size: 2em;
    letter-spacing: 1px;
    margin-bottom: 5px;
}

p {
    line-height: 1.4;
}

header p {
    font-size: 1.3em;
}

header p:first-of-type {
    margin-right: 50px;
}

header p:nth-of-type(2) {
    flex-basis: 60%;
}

.launch-details {
    font-size: 1rem;
    margin-top: 50px;
    max-width: 450px;
}

body > section {
    margin-bottom: 40px;
    transition: 0.5s all;
}

ol {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

ul {
    list-style-type: none;
}

li {
    min-width: 350px;
    margin-bottom: 20px;
    border: 1px solid rgb(148, 148, 148);
    width: calc(50% - 10px);
    cursor: pointer;
}

a {
    text-decoration: none;
    color: #fff;
    display: flex;
    transition: 0.5s all;
}

.img-container {
    flex-basis: 100%;
    display: flex;
    flex-wrap: wrap;
    margin-top: 50px;
}

.img-container img {
    width: 50px;
    margin-right: 10px;
    cursor: pointer;
    transition: 0.5s;
}

.img-container img:hover {
    opacity: .6;
}

.background-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 85vh;
    width: 100%;
    /* max-height: 900px; */
    /* z-index: -1; */

    background: rgb(22,22,22);
    background: linear-gradient(0deg, rgba(22,22,22,1) 0%, rgba(22,22,22,0.5) 30%, rgba(22,22,22,0.3) 50%, rgba(22,22,22,0.1) 100%);
}

.background-overlay div {
    position: relative;
    height: 100%;
    width: 100%;
    z-index: -2;
    background-repeat: no-repeat;
    background-size:  auto 100vh;
    background-position: top center;
}

body > section > p {
    font-size: 1.3rem;
}

li > a > p {
    font-family: 'Roboto', sans-serif;
    border-right: 1px solid rgb(148, 148, 148);
    background-color: #212121;
    text-align: center;
    padding: 30px 20px 20px;
    font-size: 1.6em;
    font-weight: 300;
    width: 4em;
}

li > a p::first-line {
    font-size: 2rem;
    font-weight: 500;
    margin-bottom: 3px;
}

li > a section {
    padding: 15px 30px 25px;
    min-width: 300px;
}

li > a section p {
    /* font-size: 1.1em; */
    letter-spacing: .7px;
    font-weight: 200;
    width: 100%;
    max-width: 165px;
    display: flex;
    margin-bottom: 2px;;
}

li > a p > span {
    font-weight: 600;
    margin: 0 0 0 auto;
}

a:hover {
    color: grey;
}





/* ---- everything of detail sections ---- */

.detail-section {
    position: relative;
    border: 2px solid rgb(148, 148, 148);
    z-index: 20;
    transition: none;
    background-color: #161616;
    padding: 40px 50px 60px;
    width: calc(50% - 20px);
    min-width: 370px;
    margin-bottom: 40px;
}

.detail-section h2 {
    font-size: 1.6rem;
    margin-bottom: 0px;
}

.detail-section h2 + p {
    font-size: 2rem;
    font-weight: 600;
    margin-bottom: 30px;
}

.detail-section li {
    text-transform: uppercase;
    -webkit-box-shadow: none;
    box-shadow: none;
    cursor: auto;
    min-width: 0px;

    display: flex;
    flex-wrap: wrap;
    width: 100%;
    margin-bottom: -1px;
    border: 1px solid rgb(148, 148, 148);
    border-style: solid none;
    padding: 15px 30px;
    font-size: .9rem;
    font-weight: 600;
    letter-spacing: .5px;
}

.detail-section li span {
    margin: 0 0 0 auto;
    font-weight: 400;
}

@media only screen and (max-width: 600px) {
    body {
        margin: 40px 20px;
    }

    header {
        padding-top: 20px;
    }

    h1 {
        font-size: 3.5em;
    }

    header h1 {
        font-size: 2.5em;
    }

    h2 {
        font-size: 1.6em;
    }

    h3 {
        font-size: 1.6em;
    }

    li {
        min-width: 0px;
        width: 100%;
    }

    li > a section {
        min-width: 0px;
    }

    li > a p {
        font-size: 1rem;
        font-weight: 400;
    }

    li > a p::first-line {
        font-size: 1.4rem;
    }

    .detail-section {
        width: 100%;
        min-width: 0px;
        padding: 30px 20px;
    }

    .detail-section li {
        padding: 15px 0px;
    }
} 

@media only screen and (min-width: 600px) {
    main {
        width: calc(90% - 200px);
    }
}

@media only screen and (min-width: 1100px) {
    /* .background-overlay {
        height: 85vh;
    } */
    body {
        max-width: 1400px;
    }

    .background-overlay div {
        background-size:  100vw auto;
        /* background-position: 10% 0%; */
    }
} 

@media only screen and (min-width: 1600px) {
    body {
        margin: 50px auto;
    }
} 

